--- a/css/styles.css
+++ b/css/styles.css
@@ -67,6 +67,13 @@ main {
   padding: 2rem 2rem 4rem;
 }
 
+
+.retailer-login-row {
+  display: flex;
+  justify-content: center;
+}
+
+
 .hero-section {
   margin: 0 auto;
   max-width: 55rem;
